--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "hardevine/shoppingcart": "^2.8",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "predis/predis": "^1.1"
+        "laravelcollective/html": "^6.1",
+        "predis/predis": "^1.1",
+        "spatie/laravel-permission": "^3.12"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
