--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "hardevine/shoppingcart": "^2.8",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
